--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,13 @@
 body,
 div,
 ul,
+/*COLOR PALLETE
+Light Sea Green -- #245CA4
+Dark Slate Blue -- #2B638A
+Steel Blue -- #418EB1
+Midnight Blue -- #1E3254
+Cadet Blue -- #5F8B62  */
+
 li,
 p,
 h1,
@@ -27,7 +34,7 @@ h6 {
 
 h1 {
   font-size: 40px;
-  color: #f5a623;
+  color: #5f8b62;
   line-height: 48px;
   display: inline;
 }
@@ -35,7 +42,7 @@ h1 {
 h2 {
   font-weight: bold;
   font-size: 24px;
-  color: #999;
+  color: #1e3254;
   line-height: 29px;
   padding: 10px;
 }
@@ -66,7 +73,7 @@ h5 {
 .date-text {
   font-style: italic;
   font-size: 14px;
-  color: #999;
+  color: #FFF;
   line-height: 16px;
   float: left;
 }
@@ -74,13 +81,13 @@ h5 {
 .major-text {
   font-size: 14px;
   font-style: italic;
-  color: #999;
+  color: #FFF;
 }
 
 .location-text {
   font-style: italic;
   font-size: 14px;
-  color: #999;
+  color: #FFF;
   line-height: 16px;
   float: right;
 
@@ -88,39 +95,41 @@ h5 {
 
 p {
   font-size: 14px;
-  color: #333;
+  color: #000;
   line-height: 21px;
 }
 
 a {
-  color: #1199c3;
+  color: #1e3254;
   text-decoration: none;
   margin-top: 10px;
   display: block;
+  font-weight: bold;
 }
 
 .a-fix {
  margin: 0px;
+ color: #5f8b62;
 }
 
 .welcome-message {
   font-style: italic;
   font-size: 18px;
-  color: #f3f3f3;
+  color: #418eb1;
   line-height: 28px;
 }
 
 #skills-h3 {
-  color: #f5ae23;
+  color: #5f8b62;
   display: none;
 }
 
 .orange {
-  background-color: #f5ae23;
+  background-color: #5f8b62;
 }
 
 .orange-text {
-  color: #f5ae23;
+  color: #5f8b62;
 }
 
 .white-text {
@@ -129,7 +138,7 @@ a {
 }
 
 .gray {
-  background-color: #f3f3f3;
+  background-color: #418eb1;
   padding-bottom: 10px;
   clear:both;
 }
@@ -138,9 +147,18 @@ a {
   background-color: #4a4a4a;
 }
 
+.cadet-blue {
+  color: #5f8b62;
+}
+
+a.midnight {
+  color: #1e3254;
+  font-weight: bold;
+}
+
 /* TODO: Replace with image later */
 #header {
-  background-color: #484848;
+  background-color: #1e3254;
 }
 
 .flex-box {
